--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>个人简历</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<title>陈伟林</title>
+	 <meta name="Keywords" content="陈伟林,陈伟林的主页, 陈伟林的博客, 陈伟林CSDN" />
+	 <script>
+        (function () {
+            var bp = document.createElement('script');
+            var curProtocol = window.location.protocol.split(':')[0];
+            if (curProtocol === 'https') {
+                bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+            }
+            else {
+                bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+            }
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(bp, s);
+        })();
+    </script>
+    <style>
+        .comment {
+            width: 95%;
+            margin: 0 auto;
+        }
+		.beian-height {
+    			height:20px;
+    			line-height:20px;
+		}
+        .beian-color {
+				color:#939393;
+		}
+		.beian-a {
+				display:inline-block;
+				text-decoration:none;
+		}
+
+        @media (min-width: 768px) {
+            .comment {
+                width: 60%;
+                margin: 0 auto;
+            }
+        }
+    </style>
+</head>
 </head>
 <body>
 <h2 align="center">个&nbsp; 人&nbsp; 简&nbsp;历</h2>
