--- a/index.html
+++ b/index.html
@@ -46,19 +46,6 @@
 </head>
 </head>
 <body>
-<h2 align="center">个&nbsp; 人&nbsp; 简&nbsp;历</h2>
-<hr color="black">
-<img src="images/photo.jpg" width="100" height="100" align="right" alt="靓照" border
-	="1px"/>
-<p><b>姓名：</b>陈伟林</p>
-<p><b>性别：</b>男</p>
-<p><b>出生日期：</b>1997年1月</p>
-<p><b>教育经历：</b></p>
-<pre>
-	2016.09 --- 2020.06 广东药科大学 计算机科学与技术（外包）
-</pre>
-<hr color="black"/>
-<p align="right">TEL:152-1763-7517 <br/>E-Mail:<em>williamchancwl@163.com</em>
-</p>
+	Hello!
 </body>
 </html>
